# profanity2

./: .gitignore  CLMemory.hpp  CMakeLists.txt  Dispatcher.cpp  Dispatcher.hpp  LICENSE  Makefile  Mode.cpp  Mode.hpp  README.md  help.hpp  profanity.cl  profanity.cpp
docs/: BUILD_UBUNTU.md  BUILD_WINDOWS.md
src/: profanity.cpp
tests/: Makefile  bench_mod_mul.cpp  bench_mod_mul_pr49.cpp  harness.cl  test_correctness.cpp  test_correctness_pr49.cpp  testutil.hpp
